--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+* {
+    font-family:'Courier New', Courier, monospace;
+}
 .navigation ul{
     text-align: center;
     margin: 0;
@@ -8,4 +11,11 @@
     font-weight: 100;
     letter-spacing: 2px;
     padding: 20px;
+    font-size:large
+}
+
+.title{
+    font-weight: 150;
+    letter-spacing: 2px;
+    text-align: center;
 }
